<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">图片汇</string>
    <string name="title">标题</string>
    <string name="loading">加载中...</string>
    <string name="back">返回</string>
    <string name="set">. . .</string>
    <string name="save">保存</string>
    <string name="share">分享</string>
    <string name="wrapper">设置成壁纸</string>
    <string name="save_img">图片正在保存中，请稍等...</string>
    <string name="save_success">图片已保存至%1$s</string>
    <string name="save_failure">图片保存失败！</string>
    <string name="search">输入要搜索的名称</string>
    <string name="check_net">请检查网络是否连接...</string>
    <string name="search_error">没有找到该分类</string>
    <string name="net_error">网络连接出错了，请重新连接网络!</string>
    <string name="finish_data">数据已加载完毕</string>
    <string name="success">设置壁纸成功</string>
    <string name="failure">设置壁纸失败</string>
    <string name="success_favroite">收藏成功</string>
    <string name="failure_favroite">收藏失败</string>
    <string name="favroite">收藏</string>
    <string name="check">查看%1$s的图册</string>
    <string name="setting_favroite">收藏列表</string>
    <string name="setting_search">搜索记录</string>
    <string name="ad_tips">广告提示</string>
    <string name="setting_feedback">用户反馈</string>
    <string name="setting_manager">设置</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="delete_confirm">确定删除?</string>
    <string name="long_click_to_delete_item">长按可删除搜索记录</string>
    <string name="favroite_head_title">%1$s(%2$d张)</string>
    <string name="start_use">开始使用</string>
    <string name="no_data">暂无数据</string>
    <string name="the_end">加载完毕</string>
    <string name="out_app">再按一次退出程序</string>
    <string name="tips">\t\t\t首先，跟各位用户说声不好意思，嵌入广告主要是为了给开发者带来收益。
        如果用户在使用过程中，觉得频繁的广告会影响体验的话，请在用户反馈中提出，我会尽我自己的能力优化广告。\n
    \t\t\t同时，希望用户在使用过程中，可以点击下广告，你们的支持是我们开发的动力，谢谢！</string>

    <string-array name="item_menus">
<!--        <item>9GAG</item>-->
        <item>明星</item>
        <item>美女</item>
        <item>动漫</item>
        <item>搞笑</item>
        <item>美食</item>
        <item>亲子</item>
        <item>壁纸</item>
        <item>旅游</item>
        <item>宠物</item>
        <item>摄影</item>
        <item>设计</item>
        <item>汽车</item>
        <item>家居</item>
        <item>DIY</item>
    </string-array>

</resources>
